<resources>
    <string name="app_name" translatable="false">StreetWorkout</string>
    <string name="title_places">Места</string>
    <string name="title_map">Карта</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_profile">Профиль</string>
    <string name="action_search">Поиск мест…</string>
    <string name="action_map">Переход на карту</string>
    <string name="action_add_place">Добавить место</string>
    <string name="places_title">Места тренировок</string>
    <string name="page_not_ready_title">Раздел находится в разработке</string>
    <string name="empty_favorites_list_state_message">"В списке избранного
пока ничего нет"</string>
    <string name="empty_places_list_state_message">"Список пуст
Попробуйте изменить
условия поиска
или обновить страницу"</string>
    <string name="empty_state_message">"Ничего не найдено! :(
Попробуйте изменить
условия поиска
или обновить страницу"</string>
    <string name="empty_favorites_state_message">"Ничего не найдено! :(
Попробуйте изменить
условия поиска"</string>

    <string name="required_field_empty_error">"Обязательное поле"</string>

    <!--Add new place fragment-->
    <string name="add_place_title">Новое место</string>
    <string name="hint_place_name">Название места</string>
    <string name="hint_place_address">Адрес места</string>
    <string name="hint_place_position">Координаты широта/долгота</string>
    <string name="hint_place_categories">Выберите категории</string>
    <string name="hint_place_images">Выберите фотографии</string>
    <string name="hint_images_loading">Обработка изображений…</string>
    <string name="hint_place_description">Краткое описание</string>
    <string name="title_activity_maps">Map</string>
    <string name="get_my_position_btn"><u>Определить мою геопозицию</u></string>
    <string name="add_place_btn">Отправить</string>
    <string name="sign_in_button_title">Авторизация</string>
    <string name="sign_up_button_title">Регистрация</string>
    <string name="clear_place_btn">Очистить</string>
    <string name="success_message">Успешно</string>
    <string name="failed_message">Ошибка при отправке</string>
    <string name="canceled_message">Отправка отменена</string>
    <string name="clear_fields_alert">Внимание!</string>
    <string name="clear_fields_message">Все поля будут очищены. Продолжить?</string>
    <string name="publish_permission_message">Данные будут отправлены на сервер. Продолжить?</string>
    <string name="select_category_alert">Выберите категорию:</string>
    <string name="ok_item">OK</string>
    <string name="cancel_item">Отмена</string>
    <string name="address_found">Адрес найден</string>
    <string name="place_removed">удалено из избранного</string>
    <string name="rollback_place">Вернуть…</string>
    <string name="email_hint">Введите email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Пароль</string>
    <string name="success_sign_up">Пользователь %s успешно зарегистрирован</string>
    <string name="success_sign_in">Добро пожаловать %s!</string>
    <string name="sign_in_alert_dialog_message">Авторизуйтесь в приложении, чтобы добавлять новые места</string>

    <!--Geoposition-->
    <string name="fetch_address">Поиск адреса</string>
    <string name="settings">Настройки</string>
    <string name="invalid_lat_long_used">Неверные широта или долгота</string>
    <string name="no_address_found">Извините, адрес не найден</string>
    <string name="no_geocoder_available">Датчик недоступен</string>
    <string name="no_location_data_provided">Отсутствуют данные о координатах</string>
    <string name="service_not_available">Извините, сервис недоступен</string>
    <string name="permission_denied_explanation">Для определения геопозиции необходимо дать разрешения.</string>
    <string name="permission_rationale">Для работы необходимо предоставить разрешения</string>

    <!--Sign In/Sign Up-->
    <string name="empty_email_error">Введите email</string>
    <string name="not_valid_email_error">Введённая строка не является email</string>
    <string name="existing_user_email_error">Пользователь с таким именем уже существует</string>
    <string name="invalid_user_email_error">Пользователь не найден</string>
    <string name="empty_password_error">Введите пароль</string>
    <string name="not_valid_password_error">Пароль не может быть короче 8-ми символов</string>
    <string name="wrong_password_error">Проверьте правильность пароля</string>
    <string name="wrong_email_error">Проверьте правильность email</string>
    <string name="sign_error">Пожалуйста, исправьте ошибки</string>
    <string name="sign_prompt_message">Пожалуйста, авторизуйтесь</string>
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="logout_button"><u>Выход</u></string>
    <string name="logout_description">Выйти из текущего пользователя?</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="profile_name">Ваше имя:</string>
    <string name="profile_email">Ваш email:</string>
    <string name="action_confirm_title">Подтвердите действие</string>
    <string name="authorization_prompt_message">Уже есть аккаунт? Авторизуйтесь</string>
    <string name="registration_prompt_message">Еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="authorization_link">Авторизуйтесь</string>
    <string name="registration_link">Зарегистрируйтесь</string>

</resources>