<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/profile_name"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <TextView
        android:id="@+id/displayNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/lightGrayColor"
        app:layout_constraintBottom_toBottomOf="@+id/displayNameTitle"
        app:layout_constraintStart_toEndOf="@id/displayNameTitle"
        app:layout_constraintTop_toTopOf="@+id/displayNameTitle" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/profile_email"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayNameTitle" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/lightGrayColor"
        app:layout_constraintBottom_toBottomOf="@+id/emailTitle"
        app:layout_constraintStart_toEndOf="@id/emailTitle"
        app:layout_constraintTop_toTopOf="@+id/emailTitle" />

    <TextView
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/logout_button"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="@color/redColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>