<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackGroundColor">

    <data class="FragmentAddPlaceBinding">

        <import
            alias="V"
            type="android.view.View" />

        <variable
            name="getMyPositionClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="addCategoryClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewmodel"
            type="com.steeshock.android.streetworkout.viewmodels.AddPlaceViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mainBackGroundColor"
                    app:layout_constraintTop_toTopOf="parent"
                    app:menu="@menu/add_place_menu"
                    app:navigationIcon="@drawable/ic_arrow_back_24dp"
                    app:title="@string/add_place_title"
                    app:titleTextColor="@android:color/black" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_add_image" />

            <EditText
                android:id="@+id/place_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:layout_marginEnd="@dimen/list_item_spacing"
                android:layout_marginTop="@dimen/list_item_spacing_half"
                android:layout_marginBottom="@dimen/list_item_spacing_half"
                android:ems="10"
                android:hint="@string/hint_place_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/place_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:layout_marginEnd="@dimen/list_item_spacing"
                android:layout_marginTop="@dimen/list_item_spacing_half"
                android:layout_marginBottom="@dimen/list_item_spacing_half"
                android:ems="10"
                android:hint="@string/hint_place_address"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/place_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:layout_marginEnd="@dimen/list_item_spacing"
                android:layout_marginTop="@dimen/list_item_spacing_half"
                android:layout_marginBottom="@dimen/list_item_spacing_half"
                android:ems="10"
                android:hint="@string/hint_place_position"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/place_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:layout_marginEnd="@dimen/list_item_spacing"
                android:layout_marginTop="@dimen/list_item_spacing_half"
                android:layout_marginBottom="@dimen/list_item_spacing_half"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_place_description"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/place_categories"
                    android:focusable="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/list_item_spacing"
                    android:layout_marginTop="@dimen/list_item_spacing_half"
                    android:layout_marginBottom="@dimen/list_item_spacing_half"
                    android:layout_weight="1"
                    android:hint="@string/hint_place_categories"
                    android:inputType="textPersonName" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/list_item_spacing"
                    android:layout_marginEnd="@dimen/list_item_spacing"
                    android:layout_marginTop="@dimen/list_item_spacing_half"
                    android:layout_marginBottom="@dimen/list_item_spacing_half"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="@{addCategoryClickListener}"
                    android:src="@drawable/ic_add_circle_36dp">

                </ImageButton>

            </LinearLayout>

            <Button
                android:id="@+id/myPositionBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:layout_marginEnd="@dimen/list_item_spacing"
                android:layout_marginTop="@dimen/list_item_spacing"
                android:layout_marginBottom="@dimen/list_item_spacing_half"
                android:backgroundTint="@android:color/transparent"
                android:onClick="@{getMyPositionClickListener}"
                android:text="@string/get_my_position_btn" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</layout>